<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="within_1_year">1年内</string>
    <string name="within_30_days">30日内</string>
    <string name="within_7_days">7日内</string>
    <string name="keystore_backup">Keystore备份</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="help_center_content">帮助中心内容</string>
    <string name="remark">备注</string>
    <string name="gathering_tips_eth">本地址仅能接受以太坊<tools>%s</tools>资产，请勿转入其他公链资产</string>
    <string name="gathering_tips_trx">本地址仅能接受波场<tools>%s</tools>资产，请勿转入其他公链资产</string>
    <string name="gathering_tips_btc">本地址仅能接受比特币<tools>%s</tools>资产，请勿转入其他公链资产</string>
    <string name="bitcoin">比特币</string>
    <string name="edit_wallet">钱包名称</string>
    <string name="gathering_save">储存</string>
    <string name="create_wallet">创建钱包</string>
    <string name="save_address_book">存入地址本</string>
    <string name="token">代币</string>
    <string name="token_management">代币管理</string>
    <string name="token_list_management">代币列表管理</string>
    <string name="import_keystore">导入Keystore</string>
    <string name="import_secret_key">导入密钥</string>
    <string name="import_wallet">导入钱包</string>
    <string name="import_mnemonic_words">导入助记词</string>
    <string name="address_book">地址本</string>
    <string name="multi_language">多语言</string>
    <string name="initiate_transfer">发起转账或建立Wallet Connet连接</string>
    <string name="sending_address">发送地址</string>
    <string name="traditional_chinese">繁体中文</string>
    <string name="service_agreement">服务协议</string>
    <string name="payment_address">付款地址</string>
    <string name="copy_success">复制成功</string>
    <string name="personal_management">个人管理</string>
    <string name="announcement">公告</string>
    <string name="announcement_content">公告内容</string>
    <string name="announcement_center">公告中心</string>
    <string name="about_us">关于我们</string>
    <string name="manage_wallet">管理钱包</string>
    <string name="no_wallet_yet_click_create">还未拥有钱包,点击创建</string>
    <string name="recover_wallet">恢复钱包</string>
    <string name="back_previous_page">回到上页,重新记录助记词</string>
    <string name="currency_unit">货币单位</string>
    <string name="encrypt_private_key_json_file">加密私钥JSON文件</string>
    <string name="language_simplified_chinese">简体中文</string>
    <string name="transaction_code">交易代号</string>
    <string name="trading_date">交易日期</string>
    <string name="transaction_failed">交易失败</string>
    <string name="in_transaction">交易中</string>
    <string name="amount">金额</string>
    <string name="coming_soon">敬请期待</string>
    <string name="miner_fee_fast">快速</string>
    <string name="miner_fee">矿工费</string>
    <string name="miner_fee_limit_title">矿工费上限</string>
    <string name="miner_fees">矿工费用</string>
    <string name="miner_fee_tips">矿工费越高 转账越快</string>
    <string name="enquire_now">立即查询</string>
    <string name="miner_fee_slow">慢速</string>
    <string name="secret_key">密钥</string>
    <string name="secret_key_backup">密钥备份</string>
    <string name="name">名称</string>
    <string name="private_key_characters">明文私钥字符</string>
    <string name="error_tips">您已输入错误超过三次,是否取消此次创建,或跳过此次助记词记录</string>
    <string name="gathering_wallet_address_title">钱包地址</string>
    <string name="wallet_management">钱包管理</string>
    <string name="wallet_name">钱包名称</string>
    <string name="create_recover_wallet_tips">轻松存取 自由来去</string>
    <string name="clear_cache">清除缓存</string>
    <string name="transaction_tips">请耐心等待交易完成信息！</string>
    <string name="please_confirm_delete_wallet">请确认删除所选钱包</string>
    <string name="please_input_password">请输入密码</string>
    <string name="block_number">区块编号</string>
    <string name="cancel">取消</string>
    <string name="cancel_this_creation">取消此次创建</string>
    <string name="all">全部</string>
    <string name="all_transactions">全部交易</string>
    <string name="confirm">确认</string>
    <string name="password">密码</string>
    <string name="passord_confirm">确认密码</string>
    <string name="passord_reset">重置密码</string>
    <string name="reset_id_wallet">重置身份钱包</string>
    <string name="confirm_delete">确认删除</string>
    <string name="scan">扫一扫</string>
    <string name="generate_QR_code_store">生成二维码并储存</string>
    <string name="fail">失败</string>
    <string name="gathering">收款</string>
    <string name="to_address">收款地址</string>
    <string name="receiving_address">收款地址</string>
    <string name="pack_up">收起</string>
    <string name="quantity">数量</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="teda_currency">泰达币</string>
    <string name="skip_this_step">跳过此步骤</string>
    <string name="skip_mnemonic_word_create_wallet">跳过助记词,直接创建钱包</string>
    <string name="recommend_tokens">推荐代币</string>
    <string name="my_address">我的地址</string>
    <string name="my_assets">我的资产</string>
    <string name="details">详细内容</string>
    <string name="disappear">消失</string>
    <string name="message_details">消息内容</string>
    <string name="message_center">消息中心</string>
    <string name="new_tokens">新增ETH代币</string>
    <string name="new_wallet">新增钱包</string>
    <string name="edit">修改</string>
    <string name="one_copy">一键复制</string>
    <string name="ethercoin">以太币</string>
    <string name="privacy_statement">隐私声明</string>
    <string name="english">英文</string>
    <string name="transfer_balance">余额</string>
    <string name="use_original_mnemonic_word_wallet_import">运用原有助记词进行钱包导入</string>
    <string name="spread">展开</string>
    <string name="chinese">中文</string>
    <string name="tuesday">周二</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="monday">周一</string>
    <string name="contributing_words">助记词</string>
    <string name="backup_memorization_words">助记词备份</string>
    <string name="contributing_words_completed">助记词完成</string>
    <string name="contributing_words_confirm">助记词确认</string>
    <string name="contributing_words_confirm_second">助记确认</string>
    <string name="cash_out">转出</string>
    <string name="cash_in">转入</string>
    <string name="transfer">转账</string>
    <string name="asset">资产</string>
    <string name="miner_fee_custom">自定义</string>
    <string name="minimum_miner_fee">最低矿工费</string>
    <string name="clear_suc">清除成功</string>
    <string name="cancel_create">取消创建</string>
    <string name="skip_backup_directly_create">跳过备份直接创建</string>
    <string name="back_last_page">返回上页</string>
    <string name="wallet_status_selected">已选择</string>
    <string name="new_address_wallet">添加地址</string>
    <string name="address">地址</string>
    <string name="contributing_address_hint">请输入地址</string>
    <string name="edit_address_wallet">编辑地址</string>
    <string name="no_records">暂无记录</string>
    <string name="no_results">暂无结果</string>
    <string name="balance_insufficient">余额不足</string>
    <string name="trx_address_no_activate">该账户未激活，将额外消耗您 1.1 TRX 用于激活该账户</string>
    <string name="trx_address_no_activate_token">账户未激活，可正常转账 TRC20 通证，但不会激活该账户</string>
    <string name="repeat_address">转账地址与收款地址重复 请重新输入</string>
    <string name="network_anomaly">网络异常，请检查网络连接</string>
    <string name="retry">重试</string>
    <string name="error_tips_backup">您已输入错误超过三次,是否取消或返回上个页面</string>
    <string name="btc_minimum_amount_prompt">最小转账金额为<tools>%s</tools>，请重新输入</string>
    <string name="save_qr_picture_title">钱包的KEYSTORE</string>
    <string name="mnemonic_no_backup_tips">尚未记录助记词，如需备份，请在钱包管理中选择备份</string>
    <string name="backup_now">立即备份</string>
    <string name="backup_later">稍后备份</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="input_keystore">请输入Keystore</string>
    <string name="input_secret_key">请输入密钥</string>
    <string name="input_mnemonic_words">请输入助记词并按照原有助记词顺序进行输入</string>
    <string name="input_mnemonic_words_mnemonic">请键入正确的助记词</string>
    <string name="input_correct_keystore">请输入正确的Keystore</string>
    <string name="input_correct_secret_key">请输入正确的密钥</string>
    <string name="input_correct_mnemonic_words">请输入正确的助记词</string>
    <string name="input_correct_wallet_password">请输入正确的密码</string>
    <string name="transaction_submitted">交易已提交</string>
    <string name="input_password">输入密码</string>
    <string name="please_input_wallet_name">请输入钱包名称</string>
    <string name="input_wallet_name">输入名称</string>
    <string name="my_wallet">我的钱包</string>
    <string name="id_wallet">身份钱包</string>
    <string name="create_import">创建/导入</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="different_password">密码不一致</string>
    <string name="password_incorrect">密码不正确</string>
    <string name="password_less_six_tips">密码不小于6位</string>
    <string name="confirm_transaction">确认交易</string>
    <string name="confirm_contributing_words_error">确认助记词有误</string>
    <string name="miner_fee_low_tips">您输入的矿工费过低，将有可能造成交易失败或交易时间过长，请慎重输入！</string>
    <string name="miner_fee_high_tips">矿工费过高，请慎重输入</string>
    <string name="tips">提示</string>
    <string name="btn_confirm">确定</string>
    <string name="please_input_your_wallet_name">请输入您的钱包名称</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="di_wallet">的钱包</string>
    <string name="repeat_wallet_tips">与其他钱包名称重复，请重新输入！</string>
    <string name="wallet_password">钱包密码</string>
    <string name="contributing_words_hint">请输入中</string>
    <string name="transaction_query">交易记录</string>
    <string name="sender">发送人</string>
    <string name="receiver_address">收件人地址</string>
    <string name="miner_fee_formulae">矿工费 = GAS Price*GAS Limit</string>
    <string name="gathering_copy">复制</string>
    <string name="gathering_scan_tips">扫二维码 转入<tools>%s</tools></string>
    <string name="save_success">保存成功</string>
    <string name="save_scan">保存二维码</string>
    <string name="language_traditional_chinese">繁體中文</string>
    <string name="language_english">English</string>
    <string name="language_choose">语言选择</string>
    <string name="currency_choose">货币选择</string>
    <string name="transfer_remark">转账备注</string>
    <string name="choose_fill">选填</string>
    <string name="add_wallet">添加钱包</string>
    <string name="least_save_wallet">至少保留一个钱包</string>
    <string name="no_wallet_to_delete">没有钱包可以删除</string>
    <string name="next">下一步</string>
    <string name="refresh_pull_down">下拉更新</string>
    <string name="refresh_time">最后更新于{key}</string>
    <string name="refresh_ing">正在刷新...</string>
    <string name="refresh_release">松手立即更新</string>
    <string name="help_door_sister">新手入门须知</string>
    <string name="help_sever_sister">客服中心</string>
    <string name="game_today_order_no_log2"></string>
    <string name="transaction_success">交易成功</string>
    <string name="hk_dollar">港币（HK$）</string>
    <string name="cny_dollar">人民币（CNY）</string>
    <string name="usd_dollar">美元（USD）</string>
    <string name="up_data">更新</string>
    <string name="up_data_currency">修改计价币种</string>
    <string name="up_data_language">修改显示语言</string>
    <string name="address_page">地址页</string>
    <string name="alert_request_permission">为了保证本程序能正常运行，现在开始向您申请必要权限。</string>
    <string name="put_barcode_in_box">将条码放入框内，即可自动扫描</string>
    <string name="put_qrcode_in_box">将二维码放入框内，即可自动扫描</string>
    <string name="scan_qr_code_fail">识别失败，请试试其它二维码</string>
    <string name="edit_book">编辑</string>
    <string name="delete_book">删除</string>
    <string name="deleting">删除中</string>
    <string name="message_center_title">消息</string>
    <string name="address_already_exists">已存在相同名称或者地址</string>
    <string name="address_already_null">地址或昵称不能为空</string>
    <string name="contributing_name_hint">请输入名称</string>
    <string name="reset_password_mnemonic_tip">使用助记词可以修改钱包密码</string>
    <string name="reset_password_et_mnemonic_tip">顺序输入助记词单词，并使用空格分割</string>
</resources>