<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_rectangle"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_transfer_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_68"
        android:layout_marginStart="@dimen/dp_25"
        android:gravity="left|center_vertical"
        android:text="@string/currency_choose"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold"  />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E7E7E7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:layout_marginStart="@dimen/dp_25"
        android:gravity="left|center_vertical"
        android:text="@string/name"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_15" />


    <LinearLayout
        android:layout_marginStart="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/dp_16"
            android:background="@drawable/shape_light_green_bottom_btn"
            android:maxLength="20"
            android:hint="@string/contributing_name_hint"
            android:textColor="@color/front_one"
            android:textColorHint="@color/front_four" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dp_25"
        android:gravity="left|center_vertical"
        android:text="@string/address"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:layout_marginStart="@dimen/dp_25"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/dp_25">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:paddingStart="@dimen/dp_16"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:hint="@string/contributing_address_hint"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:background="@drawable/shape_light_green_bottom_btn"
            android:maxLength="42"
            android:textColor="@color/front_one"
            android:textColorHint="@color/front_four" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_68"
        android:layout_marginStart="@dimen/dp_25"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="left|center_vertical"
            android:text="@string/save_address_book"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/tv_check"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_selector" />
    </LinearLayout>

    <TextView
        android:id="@+id/ok"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/sp_18"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/shape_green_bottom_btn"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25" />
</LinearLayout>