<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/la_title_all"
            layout="@layout/wallet_layout_title_all"/>
        <TextView
            android:text="@string/reset_password_mnemonic_tip"
            android:textColor="@color/color_999999"
            android:layout_margin="@dimen/dp_10"
            android:textSize="@dimen/sp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:padding="@dimen/dp_24"
            android:orientation="vertical"
            android:background="@color/color_FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_mnemonic"
                android:textSize="@dimen/sp_15"
                android:gravity="start"
                android:padding="@dimen/dp_10"
                android:background="@drawable/wallet_shape_gray_et_bg"
                android:hint="@string/reset_password_et_mnemonic_tip"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_180"/>

            <TextView
                android:layout_marginTop="@dimen/dp_20"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_666666"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edt_wallet_password"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:background="@drawable/shape_light_green_bottom_btn"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/color_9598AA"
                android:textSize="@dimen/sp_13"/>

            <EditText
                android:id="@+id/edt_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44"
                android:layout_marginTop="@dimen/dp_2"
                android:background="@drawable/shape_light_green_bottom_btn"
                android:hint="@string/please_confirm_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="@dimen/dp_10"
                android:textColorHint="@color/color_9598AA"
                android:textSize="@dimen/sp_13"/>

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/dp_180"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/button_shape_enable"
                android:enabled="false"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_gravity="center"
                android:outlineProvider="none"
                android:text="@string/passord_reset"
                android:textAllCaps="false"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </LinearLayout>



</layout>