<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_rectangle"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/secret_key_backup"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E7E7E7" />

    <TextView
        android:id="@+id/tv_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/wallet_name"
        android:textColor="@color/color_000000" />

    <EditText
        android:id="@+id/edt_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:maxLength="20"
        android:enabled="false"
        android:background="@drawable/shape_light_green_bottom_btn"
        android:hint="@string/please_input_wallet_name"
        android:textColorHint="@color/color_9598AA"
        android:padding="@dimen/dp_15" />

    <TextView
        android:id="@+id/tv_secret_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/secret_key"
        android:textColor="@color/color_000000" />

    <EditText
        android:id="@+id/edt_secret_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:enabled="false"
        android:background="@drawable/shape_light_green_bottom_btn"
        android:padding="@dimen/dp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/dp_2"
            android:background="@drawable/shape_white_bottom_green_line_btn"
            android:outlineProvider="none"
            android:text="@string/gathering_copy"
            android:textColor="@color/color_3BB7A5" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/dp_2"
            android:background="@drawable/shape_green_bottom_btn"
            android:gravity="center"
            android:outlineProvider="none"
            android:text="@string/confirm"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/dp_18" />

    </LinearLayout>

</LinearLayout>