<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_rectangle"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:text="@string/edit_wallet"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/sp_15"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E7E7E7" />

    <TextView
        android:id="@+id/tv_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/input_wallet_name"
        android:textColor="@color/color_000000" />

    <EditText
        android:id="@+id/edt_wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_15"
        android:maxLength="20"
        android:background="@drawable/shape_light_green_bottom_btn"
        android:hint="@string/please_input_wallet_name"
        android:textColorHint="@color/color_9598AA"
        android:padding="@dimen/dp_15" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape_gray_bottom_btn"
        android:gravity="center"
        android:enabled="false"
        android:outlineProvider="none"
        android:textAllCaps="false"
        android:text="@string/confirm"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/dp_18" />

</LinearLayout>