<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_rectangle"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_68"
            android:layout_marginLeft="@dimen/dp_15"
            android:gravity="left|center_vertical"
            android:text="@string/currency_choose"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/gathering_copy"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/edit_book"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:gravity="center"
            android:text="@string/delete_book"
            android:textColor="@color/account_change_win"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_E7E7E7" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30" />
    </LinearLayout>
</layout>