<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_rectangle"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_language_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_74"
            android:layout_marginLeft="@dimen/dp_25"
            android:gravity="left|center_vertical"
            android:text="@string/language_choose"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_language1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="left|center_vertical"
            android:text="@string/language_simplified_chinese"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_language2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="left|center_vertical"
            android:text="@string/language_traditional_chinese"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_E7E7E7" />

        <TextView
            android:id="@+id/tv_language3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="left|center_vertical"
            android:text="@string/language_english"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/sp_15" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@color/color_E7E7E7" />

    </LinearLayout>
</layout>